Fix mobile popup overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -25,6 +25,7 @@ ul, ol {
   border: 1px solid gray;
   border-radius: 5px;
   font-size: 1rem;
+  overflow: scroll;
 }
 
 .error {
@@ -33,7 +34,8 @@ ul, ol {
 
 .map-overlay {
   position: absolute;
-  width: calc(min(96vw, 400px));
+  width: 78vw; // FIXME this was a quick fix to prevent overflow
+  max-width: 400px;
   background-color: #fff;
   border-radius: 5px;
   z-index: 1;
